change the content of about us page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
     <title>Vraj Patel</title>
 
 </head>
-<style>
-</style>
 
 <body>
 
@@ -76,7 +74,7 @@
                         <h3 class="my-1 p-0">
                             Vraj Patel
                         </h3>
-                        <p class="my-1 p-0">Web Developer</p>
+                        <p class="my-1 p-0">Full Stack Web Developer</p>
                     </div>
                     <div class="my-3" id="index_btnDiv">
                         <a type="button" class="btn mx-2 btn-type-1" href="./Images/Vraj_Patel-Resume.pdf" download>
@@ -132,7 +130,7 @@
                                 <h5 class="my-1 p-0">
                                     Projects
                                 </h5>
-                                <p class="my-1 p-0">3+ Completed</p>
+                                <p class="my-1 p-0">5+ Completed</p>
                             </div>
                         </div>
                         <div class="about-card col-md-3 ms-md-0 me-md-4 col-sm-8 my-sm-2 col-10 mx-2 my-3">
@@ -156,12 +154,26 @@
                         </div>
                     </div>
                     <div class="mt-4 px-md-0 pe-md-4 px-3" id="infoDiv">
-                        <p>My name is <b>Vraj Patel</b>. My specialization in Information Technology.
-                            My abilities - I am <b>Self Motivated , Enthusiastic</b> and <b>Hard Working</b>.
-                            My short term goal is to get a job in MNCs.And after I am looking forward to achieve best
-                            position in your company.<br>
-                            My hobbies are - Read books like autobiography, indian history, revolution; To understand
-                            and do love about indian history; Web development
+                        <p>
+                            <li>
+
+                                My self <b>Vraj Patel</b>. &nbsp;I'm persuing B.tech from Dharmsinh Desai University in
+                                Information
+                                Technology.&nbsp;I'm prefinal year student.
+                            </li>
+                            <li>
+                                I'm <b> Full Stack Web Developer </b>. And also I have good knowledge about <b>C++</b>.
+                            </li>
+                            <li>
+                                My Best Thing is that <u> I'm learning new technologies and programming
+                                    languages fastly. </u>
+                            </li>
+                            <li>
+                                My hobbies are - <br>
+                                Read books like autobiography, indian history, revolution <b>|</b>
+                                To understand and do love about indian history <b>|</b>
+                                Web development <b>|</b>
+                            </li>
                         </p>
                     </div>
                     <div class="mt-4 px-md-0 px-3" id="about_btnDiv">
@@ -306,7 +318,8 @@
                                         class="btn btn-type-3 me-md-2 col-md-4 col-5">
                                         Github &nbsp; <i class="fa-brands fa-github fa-flip"></i>
                                     </a>
-                                    <!-- <a href="#" class="btn btn-type-2 col-md-4 col-5" target="_blank">
+                                    <!-- <a href="#" class="btn btn-type-2 col-md-4 col-5" target="_blank"
+                                        style="font-size: 1rem;">
                                         Live &nbsp; <i class="fa-brands fa-telegram fa-spin"></i></a> -->
                                 </div>
                             </div>
@@ -337,7 +350,8 @@
                                         class="btn btn-type-3 me-md-2 col-md-4 col-5">
                                         Github &nbsp; <i class="fa-brands fa-github fa-flip"></i>
                                     </a>
-                                    <!-- <a href="#" class="btn btn-type-2 col-md-4 col-5" target="_blank">
+                                    <!-- <a href="#" class="btn btn-type-2 col-md-4 col-5" target="_blank"
+                                        style="font-size: 1rem;">
                                         Live &nbsp; <i class="fa-brands fa-telegram fa-spin"></i></a> -->
                                 </div>
                             </div>
@@ -368,7 +382,7 @@
                                         Github &nbsp; <i class="fa-brands fa-github fa-flip"></i>
                                     </a>
                                     <a href="https://covid19-api-webapp.netlify.app/"
-                                        class="btn btn-type-2 col-md-4 col-5" target="_blank">
+                                        class="btn btn-type-2 col-md-4 col-5" target="_blank" style="font-size: 1rem;">
                                         Live &nbsp; <i class="fa-brands fa-telegram fa-spin"></i></a>
                                 </div>
                             </div>
@@ -399,8 +413,8 @@
                                         class="btn btn-type-3 me-md-2 col-md-4 col-5">
                                         Github &nbsp; <i class="fa-brands fa-github fa-flip"></i>
                                     </a>
-                                    <!-- <a href="#"
-                                        class="btn btn-type-2 col-md-4 col-5" target="_blank">
+                                    <!-- <a href="#" class="btn btn-type-2 col-md-4 col-5" target="_blank"
+                                        style="font-size: 1rem;">
                                         Live &nbsp; <i class="fa-brands fa-telegram fa-spin"></i></a> -->
                                 </div>
                             </div>
