add sudolu-solver project, fav-i.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- fav-i -->
+    <link rel="icon" type="image/x-icon" href="/Images/logo-transperant.png">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -296,7 +299,7 @@
 
             <div class="container row mx-auto px-0 py-2" id="project-cardDiv">
 
-                <div class="col-lg-3 col-md-5 mx-md-4 col-sm-10 col-12 my-2 px-0 project-card-container">
+                <div class="col-xl-3 col-lg-4 col-md-5 mx-md-3 col-sm-10 col-12 my-2 px-0 project-card-container">
                     <div class="card mb-3">
                         <div class="card-header project-card-header">
                             <h4>Verifyit</h4>
@@ -306,12 +309,9 @@
                                 <img src="Images/verifyit.png" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body px-0">
-                                <p class="card-text project-para">VerifyIt is a mobile application which helps faculty
-                                    to verify students who are sitted in examination hall. On the other hand admin/exam
-                                    dept. head (Web based interface) can assign various blocks to different different
-                                    faculties and in turn each faculty can verify blocks assigned to them.
+                                <textarea class="card-text project-para" rows="10" readonly>VerifyIt is a mobile which helps faculty to verify students who are sitted in examination hall. On the other hand admin/exam dept. head (Web based interface) can assign various blocks to different different faculties and in turn each faculty can verify blocks assigned to them.
 
-                                </p>
+                                </textarea>
                                 <div class="d-flex justify-content-between align-items-center project-btns mt-5">
 
                                     <a href="https://github.com/my1243/verifyIt-Hackprints" target="_blank"
@@ -327,7 +327,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-5 mx-md-4 col-sm-10 col-12 my-2 px-0 project-card-container">
+                <div class="col-xl-3 col-lg-4 col-md-5 mx-md-3 col-sm-10 col-12 my-2 px-0 project-card-container">
                     <div class="card mb-3">
                         <div class="card-header project-card-header">
                             <h4>Shree Sahajanand Furniture <br> Web Application</h4>
@@ -337,13 +337,8 @@
                                 <img src="Images/ssf.jpg" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body px-0">
-                                <p class="card-text project-para">
-                                    This is a web application project aimed at creating a successful online platform for
-                                    a furniture company to showcase products, sell them to potential users, and increase
-                                    sales.The application will have an attractive and user-friendly design, a product
-                                    catalog with a shopping cart and secure payment gateway, search functionality, and
-                                    user reviews.
-                                </p>
+                                <textarea class="card-text project-para" rows="10" readonly> This is a web application project aimed at creating a successful online platform for a furniture company to showcase products, sell them to potential users, and increase sales.The application will have an attractive and user-friendly design, a product catalog with a shopping cart and secure payment gateway, search functionality, and user reviews.
+                                </textarea>
                                 <div class="d-flex justify-content-between align-items-center project-btns mt-5">
 
                                     <a href="https://github.com/VrajPatelK/SHREE-SAHAJANAND-FURNITURE" target="_blank"
@@ -359,7 +354,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-5 mx-md-4 col-sm-10 col-12 my-2 px-0 project-card-container">
+                <div class="col-xl-3 col-lg-4 col-md-5 mx-md-3 col-sm-10 col-12 my-2 px-0 project-card-container">
                     <div class="card mb-3">
                         <div class="card-header project-card-header">
                             <h4>Covid-19 API Web-App</h4>
@@ -369,12 +364,8 @@
                                 <img src="Images/covid-19.png" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body px-0">
-                                <p class="card-text project-para">
-                                    This project is an AngularJS web application that fetches data from an online
-                                    COVID-19 API using routing.
-                                    Routing done based on country name . User can search the country name and get the
-                                    details about it.
-                                </p>
+                                <textarea class="card-text project-para" rows="10" readonly> This project is an AngularJS web application that fetches data from an online COVID-19 API using routing. Routing done based on country name . User can search the country name and get the details about it.
+                                </textarea>
                                 <div class="d-flex justify-content-between align-items-center project-btns mt-5">
 
                                     <a href="https://github.com/VrajPatelK/covid19-api-webapp" target="_blank"
@@ -390,7 +381,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-5 mx-md-4 col-sm-10 col-12 my-2 px-0 project-card-container">
+                <div class="col-xl-3 col-lg-4 col-md-5 mx-md-3 col-sm-10 col-12 my-2 px-0 project-card-container">
                     <div class="card mb-3">
                         <div class="card-header project-card-header">
                             <h4>Covid-19 API Web-App</h4>
@@ -400,13 +391,8 @@
                                 <img src="Images/egov.jpg" class="card-img-top" alt="...">
                             </div>
                             <div class="card-body px-0">
-                                <p class="card-text project-para">
-                                    The intention to make this project was to make egov student portal more attractive
-                                    and colourfull by using REACT App as a frontend and Tailwind as a css.
-                                    Here, we include our home page, fees voucher page, exam result page. For the hall
-                                    ticket page, we have included information about hall ticket along with download
-                                    functionality.
-                                </p>
+                                <textarea class="card-text project-para" rows="10" readonly> The intention to make this project was to make egov student portal more attractive and colourfull by using REACT App as a frontend and Tailwind as a css. Here, we include our home page, fees voucher page, exam result page. For the hall ticket page, we have included information about hall ticket along with download functionality.
+                                </textarea>
                                 <div class="d-flex justify-content-between align-items-center project-btns mt-5">
 
                                     <a href="https://github.com/my1243/egovportal" target="_blank"
@@ -416,6 +402,33 @@
                                     <!-- <a href="#" class="btn btn-type-2 col-md-4 col-5" target="_blank"
                                         style="font-size: 1rem;">
                                         Live &nbsp; <i class="fa-brands fa-telegram fa-spin"></i></a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-lg-4 col-md-5 mx-md-3 col-sm-10 col-12 my-2 px-0 project-card-container">
+                    <div class="card mb-3">
+                        <div class="card-header project-card-header">
+                            <h4>Sudoku-Solver <br>(DSA Based Project)</h4>
+                        </div>
+                        <div class="card-body" id="">
+                            <div class="project-image-div">
+                                <img src="Images/sudoku-solver.png" class="card-img-top" alt="...">
+                            </div>
+                            <div class="card-body px-0">
+                                <textarea class="card-text project-para" rows="10"
+                                    readonly>This project aims to develop a Sudoku solver using a backtracking algorithm. The project is based on the principles of Data Structures and Algorithms (DSA) and focuses on solving Sudoku puzzles programmatically.Backtracking explores all possible solutions, incrementally building a valid solution, and undoing the last step if it leads to an invalid solution. This approach guarantees finding a solution if one exists.</textarea>
+                                <div class="d-flex justify-content-between align-items-center project-btns mt-5">
+
+                                    <a href="https://github.com/VrajPatelK/Sudoku-Solver" target="_blank"
+                                        class="btn btn-type-3 me-md-2 col-md-4 col-5">
+                                        Github &nbsp; <i class="fa-brands fa-github fa-flip"></i>
+                                    </a>
+                                    <a href="https://dsa-sudoku-solver.netlify.app/"
+                                        class="btn btn-type-2 col-md-4 col-5" target="_blank" style="font-size: 1rem;">
+                                        Live &nbsp; <i class="fa-brands fa-telegram fa-spin"></i></a>
                                 </div>
                             </div>
                         </div>
