Update index.html - change title of egov portal project

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="col-xl-3 col-lg-4 col-md-5 mx-md-3 col-sm-10 col-12 my-2 px-0 project-card-container">
                     <div class="card mb-3">
                         <div class="card-header project-card-header">
-                            <h4>Covid-19 API Web-App</h4>
+                            <h4>EGOV Portal <br>(Based On ReactJS)</h4>
                         </div>
                         <div class="card-body" id="">
                             <div class="project-image-div">
